src/test/deca/library/invalid/difference_matrice_taille_different.deca
// Description:
//    somme entre deux tableaux avec des different taille
//
// Resultats:
// erreur
// Historique:
//    cree le 21/01/2023

#include "Difference.decah"

{
    Difference matrixDiff = new Difference();
    float[] y = new float[7];
    int[][] a = new int[3][5];
    int[][] d = new int[3][3];
    float[][] b = new float[3][3];
    float[][] c = new float[3][3];

    println("Test soustraction tableau 2D");
    println("Soustraction entre un tableau de int rempli de 5 et un tableau de float rempli de 6.0");
    matrixDiff.setInt2DTable(a,5);
    matrixDiff.setFloat2DTable(b,6.0);
    matrixDiff.diffIntFloat2D(a,b);
    println("Le résultat de la soustraction est: ");
    matrixDiff.printInt2DTable(a);
    println("");
}
